[package]
name = "http"
version = "0.1.0"
authors = ["420skun <420skun@gmail.com>"]
edition = "2018"

[lib]
name = "http"
path = "src/lib.rs"

[[bin]]
name = "httpbin"
path = "src/bin/main.rs"

[dependencies]
flate2 = "1.0.18"
mio = { version = "0.7", features = ["os-poll", "net"] }
regex = "1.5"
lazy_static = "1.4.0"
rustls = "0.19.1"
webpki = { version = "0.21.0", features = ["std"] }
webpki-roots = "0.21.0"
brotli = "3.3.0"